|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.4.0 RC2

- Core:
  . Fixed bug #60227 (header() cannot detect the multi-line header with 
     CR(0x0D)). (rui)

- Oracle Database extension (OCI8):
  . Fixed bug #59985 (show normal warning text for OCI_NO_DATA)
    (Chris Jones)

11 Nov 2011, PHP 5.4.0 RC1
- General improvements:
  . Changed silent conversion of array to string to produce a notice. (Patrick)
  . Added class member access on instantiation (e.g. (new foo)->bar()) support.
    (Felipe)

- CLI SAPI:
  . Fixed bug #60112 (If URI does not contain a file, index.php is not served).
    (Laruence)
  . Fixed bug #60115 (memory definitely lost in cli server). (Laruence)
  . Fixed bug #60146 (Last 2 lines of page not being output). (Laruence)
  . Fixed bug #60180 ($_SERVER["PHP_SELF"] incorrect). (Laruence)
  . Fixed bug #60189 (php logo can not be displayed). (Laruence)

- Core:
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60174 (Notice when array in method prototype error).
    (Laruence)
  . Fixed bug #60169 (Conjunction of ternary and list crashes PHP). 
    (Laruence)
  . Fixed bug #55475 (is_a() triggers autoloader, new optional 3rd argument to
    is_a and is_subclass_of). (alan_k) 
 
- Oracle Database extension (OCI8):
  . Increased maximum Oracle error message buffer length for new 11.2.0.3 size 
    (Chris Jones)
  . Improve internal initalization failure error messages (Chris Jones)

- SPL extension
  . Reverted changes that required constructor overrides to invoke the parent
    constructor in several SPL classes and applied 5.3 fixes instead.
    Related bugs: #54384, #55175 and #55300.
  . Fixed bug #60201 (SplFileObject::setCsvControl does not expose third
    argument via Reflection). (Peter)

- Tokenizer extension